--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,4 +12,5 @@
 @import 'blocks/advantages';
 @import 'blocks/titles';
 @import 'blocks/titles';
-
+@import 'blocks/consultation';
+@import 'blocks/forms';
